--- a/app/src/main/res/layout/fragment_apod.xml
+++ b/app/src/main/res/layout/fragment_apod.xml
@@ -7,6 +7,21 @@
     tools:context=".ui.main.ApodFragment">
 
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.5"
+        tools:visibility="visible" />
+
     <ScrollView
         android:id="@+id/scrollView3"
         android:layout_width="0dp"
