--- a/app/src/main/res/layout/fragment_apod.xml
+++ b/app/src/main/res/layout/fragment_apod.xml
@@ -51,7 +51,7 @@
             <ImageView
                 android:id="@+id/imageView2"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="200dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
